refactor: css 和 其他
css 和 其他

--- a/src/_drafts/ml/2017-12-05-4.0_由浅入深计算学习理论.md
+++ b/src/_drafts/ml/2017-12-05-4.0_由浅入深计算学习理论.md
@@ -5,7 +5,8 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: 機器學習
+tags: 计算学习理论 泛化误差
+categories: [Machine Learning]
 ---
 
 ## 由浅入深计算学习理论  Computational learning theorey
