--- a/src/_drafts/ml/2017-12-05-3_生成式模型和判别式分类器：朴素贝叶斯和逻辑斯提回归.md
+++ b/src/_drafts/ml/2017-12-05-3_生成式模型和判别式分类器：朴素贝叶斯和逻辑斯提回归.md
@@ -5,7 +5,8 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: 機器學習
+categories: [Machine Learning]
+tags: [naive bayes, logistic regression]
 ---
 ## 生成式模型和判别式模型：朴素贝叶斯和逻辑斯提回归
 
