--- a/src/_drafts/ml/2017-12-05-6_聚类算法学习.md
+++ b/src/_drafts/ml/2017-12-05-6_聚类算法学习.md
@@ -5,7 +5,8 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: 機器學習
+tags: 聚类
+categories: [Machine Learning]
 ---
 ## 聚类算法学习
 
