--- a/src/_drafts/ml/2017-12-05-概率图模型.md
+++ b/src/_drafts/ml/2017-12-05-概率图模型.md
@@ -5,5 +5,5 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: 機器學習
+categories: [Machine Learning]
 ---
