--- a/src/_drafts/nlp/2017-12-05-nlp基础知识.md
+++ b/src/_drafts/nlp/2017-12-05-nlp基础知识.md
@@ -5,7 +5,7 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: 自然語言處理
+categories: NLP
 ---
 # Natural Language Processing 
 
