--- a/src/_drafts/2020-02-18-XSS-攻击.md
+++ b/src/_drafts/2020-02-18-XSS-攻击.md
@@ -1,13 +1,11 @@
 ---
-
 layout: post
 title: "XSS攻击"
 subtitle: "XSS attack"
 date: 2020-02-18 21:10:00
 author: "tzuw"
 header-img:  "public/assets/img/cement.png"
-tags: [xss, csrf, security, session, cookies, httpheader] 
-
+tags: [xss, security, cookies] 
 categories: [Web安全]
-
 ---
+
