--- a/src/_drafts/nlp/2017-12-05-关键词抽取-大纲.md
+++ b/src/_drafts/nlp/2017-12-05-关键词抽取-大纲.md
@@ -5,7 +5,7 @@ date:   2019-08-11 22:47:42
 author:  "tzuw"
 header-img: "img/post-bg-2015.jpg"
 catalog:   false
-tags: [TF-IDF, TextRank, LDA]
+tags: [keyword, tf-idf, textRank, LDA]
 categories: NLP
 ---
 ## 关键词提取-大纲
