refactor: 四年一次，更新一波
2020.02.29 今天四年才一次，更新一波

--- a/src/_drafts/2020-02-15-jekyll-实现博客内容搜寻.md
+++ b/src/_drafts/2020-02-15-jekyll-实现博客内容搜寻.md
@@ -5,7 +5,7 @@ subtitle: "Implementation of in-ite searching of a jekyll site"
 date: 2020-01-15 21:10:00
 author: "tzuw"
 header-img:  "public/assets/img/cement.png"
-tags: [jekyll, javascript] 
+tags: [jekyll] 
 categories: [jekyll, Javascript]
 ---
 
