refactor: 修正markdown在index页面的显示
1. 2020/03/13 修正markdown在index页面的显示
2. 加入 istodo 变量

--- a/src/_drafts/algorithm/sort/2020-03-09-快速排序和其它排序算法.md
+++ b/src/_drafts/algorithm/sort/2020-03-09-快速排序和其它排序算法.md
@@ -2,15 +2,73 @@
 title: "快速排序和其它排序算法"
 subtitle: "Quick Sort and others"
 layout: post
+catalog: true
 author: "tzuw"
 date: 2020-03-10 16:22:00
-tags: [排序算法, 快速排序, 学习笔记]
+istodo: false
+tags: [排序算法, 快速排序, 刷题, 学习笔记]
 categories: [算法]
 ---
 
 ###  快速排序的两种简单实现
 
 >   Quick Sort
+
+**需要注意的地方** 
+
+1.  **快速排序的思想：分治法**
+
+    每次把数组切分成两部分，大于 pivot 的部分和小于 pivot 的部分。
+
+    
+
+2.  **临界点的地方**
+
+    ```java
+    // 第一种
+    for (int i = left, j = right; i < right; j++) {
+      ...
+    }
+    
+    // 第二种
+    int i = left, j = right;
+    while (i < j) {
+      ...
+    }
+    
+    ```
+
+    比如，数组 [ 1, 100, 2, 40, 11, 5, 1, 18, 10 ]，
+
+    在遇到临界点 [ ~~1, 1, 2, 5, 10, 11, 18~~, 40, 100 ]  的时候，还需要对剩下的部分进行排序。
+
+    此时，left = 7，right  = 8，在两种实现方式中，都是把相邻的 left 和 right 输入，然后**根据条件确认需要互换的位置**。最后，出循环并执行互换。
+
+    **条件**：
+
+    (1) 从前往后遍历，如果遇到小于等于 pivot 的位置，就把 i++，即将需要互换的位置往后挪一位；
+
+    (2) 两头往中间遍历，前面和条件一一样，从后往前的遍历则是，如果遇到大于等于 pivot 的位置，就把 "j - -" ，即将需要互换的位置往前挪一位；
+
+    
+
+3.  **随机 pivot 有什么好处？**
+
+      
+
+4.  **两种实现方式的区别？**
+
+    一个只从前面开始往后面找，第二个从两头往中间找。
+
+    
+
+5.  **时间复杂度怎么解释？**
+
+      
+
+6.  **还有什么其他改进的地方？**
+
+
 
 ```java
 public class Solution {
@@ -47,8 +105,8 @@ public class Solution {
   }
   
   public static int partition2(int[] arr, int left, int right) {
-		Random random = new Random();
-		int pivotIndex = left + random.nextInt(right - left + 1);
+    Random random = new Random();
+    int pivotIndex = left + random.nextInt(right - left + 1);
     // int pivotIndex = left + (right - left) / 2;
     // System.out.println(" " + left + " " + right + " " + pivotIndex);
     int pivot = arr[pivotIndex];
@@ -77,59 +135,7 @@ public class Solution {
 }
 ```
 
-**p.s 需要注意的地方 : **
 
-1.  **快速排序的思想：分治法**
-
-    每次把数组切分成两部分，大于 pivot 的部分和小于 pivot 的部分。
-
-    
-
-2.  **临界点的地方**
-
-    ```java
-    // 第一种
-    for (int i = left, j = right; i < right; j++) {
-      ...
-    }
-    
-    // 第二种
-    int i = left, j = right;
-    while (i < j) {
-      ...
-    }
-    
-    ```
-
-    比如，数组 [ 1, 100, 2, 40, 11, 5, 1, 18, 10 ]，
-
-    在遇到临界点 [ ~~1, 1, 2, 5, 10, 11, 18~~, 40, 100 ]  的时候，还需要对剩下的部分进行排序。
-
-    此时，left = 7，right  = 8，在两种实现方式中，都是把相邻的 left 和 right 输入，然后**根据条件确认需要互换的位置**。最后，出循环并执行互换。
-
-    **条件**：
-
-    (1) 从前往后遍历，如果遇到小于等于 pivot 的位置，就把 i++，即将需要互换的位置往后挪一位；
-
-    (2) 两头往中间遍历，前面和条件一一样，从后往前的遍历则是，如果遇到大于等于 pivot 的位置，就把 j-- ，即将需要互换的位置往前挪一位；
-
-    
-
-3.  **随机 pivot 有什么好处？**
-
-    
-
-4.  **两种实现方式的区别？**
-
-    一个只从前面开始往后面找，第二个从两头往中间找。
-
-    
-
-5.  **时间复杂度怎么解释？**
-
-    
-
-6.  **还有什么其他改进的地方？**
 
 
 
