--- a/src/_drafts/algorithm/string/2020-03-07-最长回文子串.md
+++ b/src/_drafts/algorithm/string/2020-03-07-最长回文子串.md
@@ -3,6 +3,7 @@ layout: post
 title: "[遗留]最长回文子串"
 subtitle: "Longest Palindrome sub string"
 date: 2020-03-07 13:10:00
+istodo: true
 author: "tzuw"
 header-img: "public/assets/img/cement.png"
 tags: [String, Java, 学习笔记] 
