--- a/src/_drafts/algorithm/string/2020-03-08-字符串的全排列.md
+++ b/src/_drafts/algorithm/string/2020-03-08-字符串的全排列.md
@@ -3,6 +3,7 @@ layout: post
 title: "[遗留]字符串的全排列"
 subtitle: All permutations of a string"
 date: 2020-03-08 13:10:00
+istodo: true
 author: "tzuw"
 header-img: "public/assets/img/cement.png"
 tags: [String, Java, 学习笔记] 
