--- a/src/_drafts/algorithm/string/2020-03-06-字符串转换成整数.md
+++ b/src/_drafts/algorithm/string/2020-03-06-字符串转换成整数.md
@@ -3,6 +3,7 @@ layout: post
 title: "字符串转换成整数"
 subtitle: "Convert String into int"
 date: 2020-03-06 13:10:00
+istodo: true
 author: "tzuw"
 header-img: "public/assets/img/cement.png"
 tags: [String, Java, 学习笔记] 
