new posts: RDBMS-vs-NoSQL.md & Singleton模式.md & update 工廠模式.md

--- a/src/_posts/software_engineering/design_pattern/2020-05-01-工廠模式.md
+++ b/src/_posts/software_engineering/design_pattern/2020-05-01-工廠模式.md
@@ -65,7 +65,7 @@ public class IphoneFactory implements Factory {
 
 代工了太多種產品，每個產品都自己單獨一個工廠類，導致我們的代碼中出現了太多的工廠，很難維護耶。於是（更厲害的）**抽象工廠模式**，就出現了。這個模式能夠在不違反開放封閉原則的條件下，又能夠降低增加新產品時所增加的複雜度。
 
-抽象工廠，指的是定義一個創建產品族的介面，產品族裡面每個產品的具體類別由繼承抽象工廠的實體工廠決定。它的目的是為了能**建立一系列相關或互相依賴物件的介面，而無需指定它們具體的類別**。
+抽象工廠，指的是定義一個用於創建產品族的介面，產品族裡面每個產品的具體類別由繼承抽象工廠的實體工廠決定。它的目的是為了能**建立一系列相關或互相依賴物件的介面，而無需指定它們具體的類別**。
 
 舉例而言，披薩的原料有麵團、醬料和起司，而因為不同地區人的口味不同，台灣的比薩店和美國的比薩店用的這些原料的製作方式並不相同。於是，你的披薩店在抽象工廠模式下，就需要實作一個披薩原料製作的介面，我們可以叫它 PizzaIngredientFactory。
 
