new posts: MongoDB 第二篇 基本使用方法
	1. 修改文件目錄
	2. 2020-05-01-MongoDB-第二篇-基本使用方法.md

--- a/src/_posts/software_engineering/back_end/Data/MongoDB/2020-04-17-MongoDB-開篇.md
+++ b/src/_posts/software_engineering/back_end/Data/MongoDB/2020-04-17-MongoDB-開篇.md
@@ -10,15 +10,19 @@ tags: [MongoDB]
 categories: [資料倉儲]
 ---
 
-看了很多篇博文的介紹後，對於 MongoDB 的理論知識上總是似懂非懂，於是決定還是自己來整理一下。MongoDB 的設計是結合了關係型資料庫的核心能力和 NoSQL 的關鍵技術。其中，關係型數據庫的關鍵能力有：易於表達的查詢語句、支持索引、一致性，以及方便和已有的技術架構整合。而作為 NoSQL 它還擁有，靈活的資料模型 (Schema-free)、可水平擴展性 (分散式架構)，以及高可用的部署 (某個節點掛掉還是可以用)。下面分別展開。然後接下來的文章就圍繞這些特性吧。
+看了很多篇博文的介紹後，對於 MongoDB 的理論知識上總是似懂非懂，於是決定還是自己來整理一下。MongoDB 是一個面向文檔的 NoSQL 數據庫，它的設計結合了關係型資料庫的核心能力和 NoSQL 的關鍵技術。其中，關係型數據庫的關鍵能力有：易於表達的查詢語句、支持索引、一致性，以及方便和已有的技術架構整合。而作為 NoSQL 它還擁有，靈活的資料模型 (Schema-free)、可水平擴展性 (分散式架構)，以及高可用的部署 (某個節點掛掉還是可以用)。下面分別展開。然後接下來的文章就圍繞這些特性吧。
+
+這邊以 MongoDB v4.2.5 為主。若有版本不同會在說明。
 
 
 
 ##### **1. 易於表達的查詢語句**
 
 ```mongodb
-db.getCollection('houses').find({"linkman":"黃先生"},{"linkman":true,"_id":false})
+db.getCollection('houses').find({"linkman": "黃先生"}, {"linkman":true,"_id":false})
 ```
+
+MongoDB 支持正則表達式查詢、範圍查詢、點對點 Ad-hoc 查詢、嵌套結構查詢，和用戶自定義 js 函數查詢。
 
 
 
@@ -34,7 +38,7 @@ db.getCollection('houses').createIndex({linkman:1, regionid:1})
 
 ##### **3. 方便和企業中已有的技術架構整合**
 
-科普一個常用於構建Web項目的工具集 MEAN (MongoDB，Express，Angular 和 Node.js) 。其他，什麼時候用MongoDB 和 node.js 的常見應用可以參考這兩個鏈接 [ref](https://cnodejs.org/topic/58d4b894b3e60b982d089b36) [ref](https://segmentfault.com/q/1010000016910793)。
+科普一個常用於構建Web項目的工具集 MEAN (MongoDB，Express，Angular 和 Node.js) 。其他，什麼時候用MongoDB 和 node.js 的常見應用可以參考這兩個鏈接 [ref](https://cnodejs.org/topic/58d4b894b3e60b982d089b36) [ref](https://segmentfault.com/q/1010000016910793) [ref](https://www.jishuwen.com/d/2SN5/zh-tw)。
 
 
 
