update posts for MongoDB.

--- a/src/_posts/software_engineering/back_end/Data/MongoDB/2020-04-17-MongoDB-開篇.md
+++ b/src/_posts/software_engineering/back_end/Data/MongoDB/2020-04-17-MongoDB-開篇.md
@@ -42,9 +42,9 @@ db.getCollection('houses').createIndex({linkman:1, regionid:1})
 
 
 
-##### **4. 靈活的資料模型**
+##### **4. 靈活的資料模型** Schema-free
 
-Schema-free。在 MongoDb 中，儘管每一筆資料的欄位型態可以不同，甚至連欄位都不一定相同，但是倘若就這樣任由使用者保存，那真的就沒有意義了。給你方便不是讓你當隨便。所以，還是會有一些基本的設計模式。例如，One-to-One、One-to-Few、One-to-Many、One-to-Squillions，等等。
+在 MongoDb 中，儘管每一筆資料的欄位型態可以不同，甚至連欄位都不一定相同，但是如果任由使用者保存，那這個資料庫其實沒有上面意義啦。給你方便不是讓你當隨便。所以，還是會有一些基本的設計模式。例如，One-to-One、One-to-Few、One-to-Many、One-to-Squillions，等等。
 
 
 
